<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Exercise Timer</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="running_time">Running</string>
    <string name="rest_time">Rest</string>
    <string name="repeat_time">Repeat</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="reset">Reset</string>
    <string name="default_running">60</string>
    <string name="default_rest">15</string>
    <string name="default_repeat">6</string>
    
</resources>